# Editor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  cmake.bat  cmake_release.bat
CMake/: MacOSXBundleInfo.plist.in
assets/templates/cmake/: CMakeLists.txt
assets/templates/cmake/game/: Game.cpp  MainGameState.cpp  MainGameState.h
data/: NeoEditor.desktop  description.md  neo-icon.icns
plugins/lua/: LuaConsole.lua  MaratisInput.lua
scripts/: NeoEditor.desktop  build_appimage.sh  build_linux_kits.sh  build_macos_release.sh  build_release.sh  build_win64_release.bat  build_windows_kits.bat  install-deps-debian.sh  install-vcpkg.bat  upload_to_sftp.sh
scripts/appimage/: linuxdeploy.AppImage
scripts/archlinux/: PKGBUILD
src/: ConsoleStream.h  UndoActions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  neo.qrc  neo_icon.rc
src/dialogs/: PluginDialog.cpp  PluginDialog.h  PluginDialog.ui  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  PublishDialog.cpp  PublishDialog.h  PublishDialog.ui
src/platform/: EditorWidget.cpp  EditorWidget.h  GameWidget.cpp  GameWidget.h  LevelWidget.cpp  LevelWidget.h  OpenGLWidget.cpp  OpenGLWidget.h  QtInputContext.cpp  QtInputContext.h
src/plugins/: PluginHost.cpp  PluginHost.h
src/project/: Project.cpp  Project.h
src/widgets/: ColorButton.cpp  ColorButton.h  LevelTreeWidget.cpp  LevelTreeWidget.h  ObjectWidget.cpp  ObjectWidget.h  VectorWidget.cpp  VectorWidget.h
